# MLOps

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
conf/base/: catalog.yml  parameters.yml
src/purchase_predict/: settings.py
src/purchase_predict/pipelines/deployment/: nodes.py  pipeline.py
src/purchase_predict/pipelines/global/: pipeline.py
src/purchase_predict/pipelines/loading/: pipeline.py
src/purchase_predict/pipelines/processing/: nodes.py
src/purchase_predict/pipelines/training/: nodes.py  pipeline.py
src/tests/pipelines/loading/: conftest.py  test_loading_pipeline.py  test_loading_run.py  test_nodes.py  test_run.py
src/tests/pipelines/processing/: conftest.py  test_processing_nodes.py  test_processing_pipeline.py
